Prepare for Heroku Deployment

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your App</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Shepton Town Map</title>
 </head>
 <body>
-    <div id="timeline"></div>
-    <div id="map-container" class="map-container"></div>
-    <div id="summary-box" class="summary-box"></div>
+    <div class="layout">
+        <div class="map-container">
+            <div id="timeline">Current Date</div>
+        </div>
+        <div class="sidebar">
+            <div class="summary-box">
+                <!-- Summary information will be displayed here -->
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
