Prepare for Heroku Deployment

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="layout">
         <div class="map-container">
+            <img src="images/shepton-background-map.png" alt="Map">
+            <object id="buildings" type="image/svg+xml" data="buildings.svg"></object>
             <div id="timeline">Current Date</div>
         </div>
         <div class="sidebar">
