Prepare for Heroku Deployment

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,8 @@
 <body>
     <div class="layout">
         <div class="map-container">
-            <img src="images/shepton-background-map.png" alt="Map">
-            <object id="buildings" type="image/svg+xml" data="buildings.svg"></object>
             <div id="timeline">Current Date</div>
+            <svg id="buildings"></svg> <!-- Moved SVG inside the map container -->
         </div>
         <div class="sidebar">
             <div class="summary-box">
