Prepare for Heroku Deployment

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="layout">
         <div class="map-container">
+            <img src="images/shepton-background-map.png" alt="Background Map" class="background-map">
+            <img src="path/to/your.svg" alt="Buildings" class="building-objects">
             <div id="timeline">Current Date</div>
-            <svg id="buildings"></svg> <!-- Moved SVG inside the map container -->
         </div>
         <div class="sidebar">
             <div class="summary-box">
