Prepare for Heroku Deployment

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
 <body>
     <div class="layout">
         <div class="map-container">
-            <img src="images/shepton-background-map.png" alt="Background Map" class="background-map">
-            <img src="path/to/your.svg" alt="Buildings" class="building-objects">
+            <object type="image/svg+xml" data="images/buildings.svg" class="building-objects"></object>
             <div id="timeline">Current Date</div>
         </div>
         <div class="sidebar">
