Prepare for Heroku Deployment

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="layout">
         <div class="map-container">
-            <object type="image/svg+xml" data="images/buildings.svg" class="building-objects"></object>
+            <img src="images/shepton-background-map.png" class="background-map" alt="Map">
+            <div class="building-objects"></div>
             <div id="timeline">Current Date</div>
         </div>
         <div class="sidebar">
