--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="layout">
         <div class="map-container">
-            <img src="images/shepton-background-map.png" class="background-map" alt="Map">
+            <img src="../images/shepton-background-map.png" class="background-map" alt="Map">
             <div class="building-objects"></div>
             <div id="timeline">Current Date</div>
         </div>
