Prepare for Heroku Deployment

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="layout">
         <div class="map-container">
-            <img src="../images/shepton-background-map.png" class="background-map" alt="Map">
+            <div class="building-modal" id="buildingModal">
+                <p id="buildingAddress">Address will be here</p>
+            </div>
+            <img src="images/shepton-background-map.png" class="background-map" alt="Map">
             <div class="building-objects"></div>
             <div id="timeline">Current Date</div>
         </div>
