--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
 <body>
     <div class="layout">
         <div class="map-container">
-            <div class="building-modal" id="buildingModal">
-                <p id="buildingAddress">Address will be here</p>
-            </div>
             <img src="images/shepton-background-map.png" class="background-map" alt="Map">
             <div class="building-objects"></div>
             <div id="timeline">Current Date</div>
+            <div class="zoom-controls">
+                <button id="zoomIn">+</button>
+                <button id="zoomOut">-</button>
+            </div>
         </div>
         <div class="sidebar">
             <div class="summary-box">
