Added zoom on map

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,11 @@
 <body>
     <div class="layout">
         <div class="map-container">
+            <button id="zoomIn">Zoom In</button>
+            <button id="zoomOut">Zoom Out</button>
             <img src="images/shepton-background-map.png" class="background-map" alt="Map">
             <div class="building-objects"></div>
             <div id="timeline">Current Date</div>
-            <div class="zoom-controls">
-                <button id="zoomIn">+</button>
-                <button id="zoomOut">-</button>
-            </div>
         </div>
         <div class="sidebar">
             <div class="summary-box">
