--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
 <body>
     <div class="layout">
         <div class="map-container">
-            <button id="zoomIn">Zoom In</button>
-            <button id="zoomOut">Zoom Out</button>
+            <div class="zoom-controls">
+                <button id="zoomIn">Zoom In</button>
+                <button id="zoomOut">Zoom Out</button>
+            </div>
             <img src="images/shepton-background-map.png" class="background-map" alt="Map">
             <div class="building-objects"></div>
             <div id="timeline">Current Date</div>
