--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
 <body>
     <div class="layout">
         <div class="map-container">
-            <img src="images/shepton-background-map.png" class="background-map" alt="Map">
-            <div class="building-objects"></div>
+            <div class="zooming-area">
+                <img src="images/shepton-background-map.png" class="background-map" alt="Map">
+                <div class="building-objects"></div>
+            </div>
             <div id="timeline">Current Date</div>
         </div>
         <div class="sidebar">
