--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/public/css/styles.css"> <!-- Updated the path -->
     <title>Shepton Town Map</title>
 </head>
 <body>
     <div class="layout">
         <div class="map-container">
             <div class="zooming-area">
-                <img src="images/shepton-background-map.png" class="background-map" alt="Map">
+                <img src="/public/images/shepton-background-map.png" class="background-map" alt="Map"> <!-- Updated the path -->
                 <div class="building-objects"></div>
                 <div id="timeline">Current Date</div>
             </div>
@@ -25,6 +25,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="/public/js/script.js"></script> <!-- Updated the path -->
 </body>
 </html>
