--- a/public/index.html
+++ b/public/index.html
@@ -31,14 +31,17 @@
             </div>
             <div class="property-details">
                 <h3>Property Details</h3>
-                <!-- Property details form fields here -->
+                <label for="propertyName">Name:</label><input id="propertyName" type="text"><br>
+                <label for="propertyStreet">Street:</label><input id="propertyStreet" type="text"><br>
+                <!-- Add the rest of the property fields here ... -->
                 <button id="editProperty">Edit</button>
                 <button id="saveProperty">Save</button>
                 <button id="deleteHistory">Delete History</button>
             </div>
             <div class="ownership-details">
                 <h3>Ownership Details</h3>
-                <!-- Ownership details form fields here -->
+                <label for="freeholdOwner">Freehold Owner:</label><input id="freeholdOwner" type="text"><br>
+                <!-- Add the rest of the ownership fields here ... -->
                 <button id="addNewOwner">Add New Owner</button>
             </div>
         </div>
@@ -46,3 +49,5 @@
     <script src="/js/script.js"></script>
 </body>
 </html>
+
+
