--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,10 @@
 
             <div class="property-details">
                 <h3>Property Details</h3>
-                SVG ID: <input type="text" id="SVGID" disabled readonly><br>
-                Number: <input type="text" id="Number" disabled><br>
-                Name: <input type="text" id="Name" disabled><br>
-                Street: <input type="text" id="Street" disabled><br>
+                SVG ID: <input type="text" id="PropertySVGID" disabled readonly><br>
+                Number: <input type="text" id="PropertyNumber" disabled><br>
+                Name: <input type="text" id="PropertyName" disabled><br>
+                Street: <input type="text" id="PropertyStreet" disabled><br>
                 Town: <input type="text" id="Town" disabled><br>
                 Post Code: <input type="text" id="PostCode" disabled><br>
                 Ward Location: <input type="text" id="WardLocation" disabled><br>
